export const translations = {
  en: {
    Global: require('./en/Global.json'),
    GroupCreateScreen: require('./en/GroupCreateScreen.json'),
    GroupSelectScreen: require('./en/GroupSelectScreen.json'),
    GroupsScreen: require('./en/GroupsScreen.json'),
    GroupUpdateScreen: require('./en/GroupUpdateScreen.json'),
    GroupUsersAppendScreen: require('./en/GroupUsersAppendScreen.json'),
    GroupUsersScreen: require('./en/GroupUsersScreen.json'),
    GroupViewScreen: require('./en/GroupViewScreen.json'),
    HabitCreateScreen: require('./en/HabitCreateScreen.json'),
    HabitsScreen: require('./en/HabitsScreen.json'),
    HabitUpdateScreen: require('./en/HabitUpdateScreen.json'),
    LoginScreen: require('./en/LoginScreen.json'),
    ProfileScreen: require('./en/ProfileScreen.json')
  }
}
