{
  "alertButtonCancel": "Cancel",
  "alertButtonConfirm": "Confirm",
  "cancelButtonLabel": "Cancel",
  "createdSuccess": "Updated!",
  "deleteButtonLabel": "Delete",
  "deleteConfirmationTitle": "Are you sure?",
  "deletedSuccess": "Updated!",
  "deleteSuccess": "Deleted",
  "detailButtonLabel": "Detail",
  "emailInputAccessibilityLabel": "Email Input",
  "emailInputLabel": "Email",
  "emailInputValidationEmail": "Email is incorrectly formatted",
  "emailInputValidationRequired": "Email is required",
  "emptyData": "No Data Found",
  "emptyGroupButtonLabel": "Press to add group",
  "errorTitle": "Something Went Wrong",
  "groupRemoveButtonAccessibilityLabel": "Group Remove Button",
  "groupSelectButtonAccessibilityLabel": "Group Select Button",
  "habitActivityCreatedPushNotification": "✅ Updated for {{date}}",
  "habitActivityCreatedSuccess": "Updated!",
  "habitActivityDeletedSuccess": "Updated!",
  "nameInputAccessibilityLabel": "Name Input",
  "nameInputLabel": "Name",
  "nameInputValidationRequired": "Name is required",
  "updateButtonLabel": "Update"
}
