{
  "createHabitButtonAccessibilityLabel": "Create Habit Button",
  "nextPeriodButtonAccessibilityLabel": "Next Period Button",
  "previousPeriodButtonAccessibilityLabel": "Previous Period Button",
  "title": "Habits"
}
